[package]
name = "rush"
version = "0.4.0"
edition = "2021"

[build]
rustflags=["-C prefer-dynamic"]

[profile.release]
strip = true
debug = false

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
libc = "*"
rand = "0.8.4"
signal-hook = "*"
confy = "*"
serde = "*"
serde_derive = "*"
num-bigint = "*"

[dependencies.carrot_libs]
path = "../carrot-libs"

[[bin]]
name = "cmp"
path = "src/cmp.rs"

[[bin]]
name = "for"
path = "src/for.rs"

[[bin]]
name = "glue"
path = "src/glue.rs"

[[bin]]
name = "if"
path = "src/if.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "nsay"
path = "src/nsay.rs"

[[bin]]
name = "rush"
path = "src/rush.rs"

[[bin]]
name = "say"
path = "src/say.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"