[package]
name = "rush"
version = "0.5.2"
edition = "2021"
default-run = "rush"

[build]
rustflags=["-C prefer-dynamic"]

[profile.release]
strip = true
debug = false

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
libc = "*"
rand = "*"
ctrlc = "*"
confy = "*"
serde = "*"
serde_derive = "*"

[dependencies.carrot_libs]
path = "../carrot-libs"


[[bin]]
name = "rush"
path = "src/rush.rs"

[[bin]]
name = "dir"
path = "src/dir.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"

[[bin]]
name = "say"
path = "src/say.rs"
[[bin]]
name = "nsay"
path = "src/nsay.rs"
